--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,11 @@
 
 # Runtime Files
 
-/runtime/*
+/runtime/cache/*
 !/runtime/cache/.gitkeep
+
+/runtime/logs/*
 !/runtime/logs/.gitkeep
+
+/runtime/sessions/*
 !/runtime/sessions/.gitkeep
