Skip to content; maintenance mode

--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -24,3 +24,10 @@ tabs:
   options:
     label: Options
     sections:
+      options_fields:
+        type: fields
+        fields:
+          maintenance:
+            label: Maintenance mode
+            type: toggle
+            default: false
